Speed up metadata/cddb lookup.

BUG: 318316
CCMAIL: github@JonnyJD.net